# Agama

./: .gitignore  CHANGELOG.md  Doxyfile  FreeMemory.h  GSLInterface.h  INSTALL  LICENSE  Makefile  Makefile.list  Makefile.local  Makefile.local.template  Makefile.msvc  NEWS  Numerics.cpp  Numerics.templates  Pspline.h  README  README.md  WDMath.cpp  WDMath.h  WDMatrix.h  __init__.py  actions_staeckel.cpp  actions_staeckel.h  bibi  coord.cpp  coord.h  generate_awesome_code.pl  meson.build  meson_options.txt  orbit.cpp  orbit.h  potential_analytic.cpp  potential_analytic.h  potential_base.cpp  potential_base.h  potential_galpot.cpp  potential_galpot.h  potential_spherical.cpp  potential_staeckel.cpp  (+9 more)
.github/workflows/: ci.yml
agama/: __init__.py  agamacolormaps.py  interface_amuse.py  nemofile.py  pygama.py  schwarzlib.py
amuse/: Makefile  README  galactic_center_agama.py  interface.cc  interface.py  test_agama.py
data/: BT08.ini  BestFitPotential.ini  Cautun20.ini  GSM_potential.ini  Irrgang13.ini  MWPotential2014.ini  MWPotential2014galpy.ini  McMillan11_best.ini  McMillan11_convenient.ini  McMillan17.ini  PJM11_best.ini  PJM11_convenient.ini  Piffl14.ini  PriceWhelan17.ini  PriceWhelan22.ini  SCM.ini  SCM3.ini  SCM_MW.ini  convertcoefs.pl  convertpot.pl  phaseflow_bahcallwolfcusp.ini  phaseflow_corecollapse.ini  raga.ini  raga_corecollapse.ini  schwarzschild_axisym.ini
doc/: readme_raga.tex  reference.tex
docs/: readme.tex  readme_raga.tex
examples/: README.md  example_actions_nbody.py  example_adiabatic_contraction.py  example_amuse.py  example_amuse_raga.py  example_basis_set.py  example_deprojection.py  example_df_fit.py  example_doublepowerlaw.py  example_forstand.py  example_gala.py  example_galpy.py  example_gizmo_snapshot.py  example_lmc_mw_interaction.py  example_lyapunov.py  example_mw_bar_potential.py  example_mw_nsd.py  example_mw_potential_hunter24.py  example_nbody_simulation.py  example_poincare.py  example_schwarzschild_flattened_rotating.py  example_schwarzschild_triaxial.py  example_self_consistent_model.py  example_self_consistent_model3.py  example_self_consistent_model_flattened.py  example_self_consistent_model_mw.py  example_self_consistent_model_simple.py  example_smoothing_spline.py  example_spiral.py  example_target.py  example_tidal_stream.py  example_time_dependent_potential.py  example_torus.py  example_vdf_fit_bspline.py  gc_modelparamsE.py  gc_modelparamsJ.py  gc_resample.py  gc_runfit.py  measureshape.py  schwarzschild.py  (+2 more)
py/: agamacolormaps.py  alltest.py  amuse_interface.py  example_actions_nbody.py  example_adiabatic_contraction.py  example_amuse.py  example_amuse_raga.py  example_basis_set.py  example_deprojection.py  example_df_fit.py  example_doublepowerlaw.py  example_forstand.py  example_gala.py  example_galpy.py  example_gizmo_snapshot.py  example_lmc_mw_interaction.py  example_lyapunov.py  example_mw_bar_potential.py  example_mw_bar_potential_new.py  example_mw_nsc.py  example_mw_nsc_obs.npz  example_mw_nsd.py  example_mw_potential_hunter24.py  example_mw_potential_khalil25.py  example_nbody_simulation.py  example_nbody_simulation_arepo.param  example_nbody_simulation_arepo.patch  example_nbody_simulation_gadget4.param  example_nbody_simulation_gadget4.patch  example_poincare.py  example_schwarzschild_flattened_rotating.py  example_schwarzschild_simple.py  example_schwarzschild_triaxial.py  example_self_consistent_model.py  example_self_consistent_model3.py  example_self_consistent_model_bdh.py  example_self_consistent_model_flattened.py  example_self_consistent_model_mw.py  example_self_consistent_model_simple.py  example_spiral.py  (+35 more)
pytests/: BestFitPotential.Tpot  MWPotential2014.Tpot  MWPotential2014.Tpot1  MWPotential2014.ini  example_actions_nbody.py  example_df_fit.py  example_galpy.py  example_schwarzschild_simple.py  example_self_consistent_model.py  example_self_consistent_model3.py  example_self_consistent_model_simple.py  example_smoothing_spline.py  galpy_agama.py  galpy_wrapper.py  gc_modelparams.py  gc_plot.py  gc_resample.py  gc_runfit.py  pygama.py  schwarzschild.py  test_actions_galpy.py  test_actions_nbody.py  test_deprojection.py  test_math.py  test_pot.py  test_user_profiles.py
src/: Numerics.cpp  Numerics.h  Numerics.templates  WDVector.h  WD_FreeMemory.h  WD_Matrix.h  WD_Numerics.cpp  WD_Numerics.templates  WD_Pspline.h  WD_Vector.h  actions_base.h  actions_factory.cpp  actions_factory.h  actions_focal_distance_finder.cpp  actions_focal_distance_finder.h  actions_genfnc.cpp  actions_genfnc.h  actions_interfocal_distance_finder.cpp  actions_interfocal_distance_finder.h  actions_isochrone.cpp  actions_isochrone.h  actions_newtorus.cpp  actions_newtorus.h  actions_spherical.cpp  actions_spherical.h  actions_staeckel.cpp  actions_staeckel.h  actions_torus.cpp  actions_torus.h  amuse_wrapper.cpp  coord.cpp  coord.h  coord_utils.h  cubature.cpp  cubature.h  debug_utils.h  df_base.cpp  df_base.h  df_disk.cpp  df_disk.h  (+135 more)
src/legacy/: AnalyticPotentials.hpp  BaseClasses.hpp  GSLInterface.hpp  Stackel_JS.cpp  Stackel_JS.hpp  coordsys.cpp  coordsys.hpp  nr3.h  utils.hpp
src/torus/: CHB.cc  CHB.h  Constants.h  Err.h  Fit.cc  Fit.h  Fit2.cc  Pi.h  (+29 more)
tests/: alltest.py  example_actions_nbody.cpp  example_df_fit.cpp  example_df_halo.cpp  example_doublepowerlaw.cpp  example_fokker_planck.cpp  example_fortran.f  example_lyapunov.cpp  example_self_consistent_model.cpp  example_self_consistent_model_mw.cpp  mkspherical.cpp  phaseflow.cpp  raga.cpp  test_action_finder.cpp  test_actionfinder.cpp  test_actions.py  test_actions_isochrone.cpp  test_actions_nbody.cpp  test_actions_spherical.cpp  test_actions_staeckel.cpp  test_actions_torus.cpp  test_all.pl  test_amuse.py  test_batch_computations.py  test_compositions.py  test_coord.cpp  test_coordinates.py  test_density_grid.cpp  test_df_fit.cpp  test_df_halo.cpp  test_df_interpolated.cpp  test_df_spherical.cpp  test_distributionfunction.cpp  test_galaxymodel.cpp  test_isochrone.cpp  test_losvd.cpp  test_math.py  test_math_core.cpp  test_math_linalg.cpp  test_math_spline.cpp  (+18 more)
