[project]
name = "agama"
version = "1.0.152"
description = "Action-based galaxy modelling architecture"
authors = [{ name = "Eugene Vasiliev", email = "eugvas@protonmail.com" }]
maintainers = [{ name = "Eugene Vasiliev", email = "eugvas@protonmail.com" }]
license = { text = "GPL,MIT,BSD" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics", "galaxy-dynamics"]
dependencies = ["cvxopt>=1.3.2", "numpy>=1.20.0", "scipy>=1.7.0"]

[dependency-groups]
dev = ["isort>=5.13.2", "pytest>=8.3.5", "ruff>=0.12.1"]

[project.urls]
Homepage = "https://github.com/GalacticDynamics-Oxford/Agama"
Repository = "https://github.com/GalacticDynamics-Oxford/Agama"
Documentation = "https://github.com/GalacticDynamics-Oxford/Agama/tree/master/doc"
"Bug Tracker" = "https://github.com/GalacticDynamics-Oxford/Agama/issues"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 120


[build-system]
requires = ["meson-python>=0.18.0", "numpy>=1.20.0"]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ["--default-library=shared"]


[tool.cibuildwheel]
skip = "*musllinux*"

[tool.cibuildwheel.linux]
before-all = "dnf install -y gsl-devel eigen3-devel"

[tool.cibuildwheel.macos]
before-all = "brew install gsl libomp eigen"

[tool.cibuildwheel.windows]
archs = "auto64"
before-all = "choco install pkgconfiglite && vcpkg install gsl eigen3"

[tool.cibuildwheel.windows.environment]
PKG_CONFIG_PATH = "C:/vcpkg/installed/x64-windows/lib/pkgconfig"
CPPFLAGS = "-IC:/vcpkg/installed/x64-windows/include"
LDFLAGS = "-LC:/vcpkg/installed/x64-windows/lib"
